// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modal-wrapper Renders \`modal-wrapper\` with custom props and slots 1`] = `
<div
  class="v-card v-sheet theme--light fill-min-height"
>
  <div
    class="v-card__title white--text"
    style="background-color: red;"
  >
    <div
      class="modal-wrapper__title headline"
    >
      <div>
        <div>
          Title
        </div>
      </div>
      <div>
        <modal-title-buttons-stub
          close="true"
          minimize="true"
        />
      </div>
    </div>
  </div>
  <div
    class="v-card__text"
  >
    <div>
      Text
    </div>
  </div>
  <hr
    class="v-divider theme--light"
  />
  <div
    class="v-card__actions"
  >
    <div
      class="layout py-1 justify-end align-center"
    >
      <div>
        Actions
      </div>
    </div>
  </div>
</div>
`;

exports[`modal-wrapper Renders \`modal-wrapper\` with default props 1`] = `
<div
  class="v-card v-sheet theme--light"
/>
`;

exports[`modal-wrapper Renders \`modal-wrapper\` with minimized modal 1`] = `
<div
  class="v-card v-sheet theme--light"
>
  <div
    class="v-card__title white--text"
  >
    <div
      class="modal-wrapper__title headline"
    >
      <div>
        <div>
          Title
        </div>
      </div>
      <div>
        <modal-title-buttons-stub />
      </div>
    </div>
  </div>
  <!---->
</div>
`;
